# webaves

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FUNDING.yml  README.md  sponsors.md
.github/workflows/: rust_build.yml  rust_test.yml
crates/old/app/: config.rs
crates/old/data/: project_config_template.toml
crates/old/io/: mod.rs
crates/old/project/: mod.rs  worker.rs
crates/webaves/: CHANGELOG.md  Cargo.toml  README.md
crates/webaves-app/: Cargo.toml  README.md
crates/webaves-app/locales/en-US/: args.ftl
crates/webaves-app/src/: args.rs  argtypes.rs  argutil.rs  common.rs  dns.rs  dns_lookup.rs  echo.rs  lib.rs  logging.rs  main.rs  manpage.rs  message.rs  service.rs  warc.rs
crates/webaves-app/src/warc/: dump.rs  extract.rs  mod.rs  read.rs
crates/webaves/migrations/: 0000-pragma.sql  0001-create.sql
crates/webaves/src/: compress.rs  crypto.rs  dns.rs  download.rs  error.rs  io.rs  lib.rs  nomutil.rs  quest.rs  retry.rs  stream.rs  stringesc.rs  stringutil.rs  uuid.rs  warc.rs
crates/webaves/src/fetch/: fetcher.rs  mod.rs  pipeline.rs  resolver.rs  shared.rs
crates/webaves/src/header/: format.rs  mod.rs  parse.rs  pc.rs  util.rs
crates/webaves/src/http/: chunked.rs  field.rs  header.rs  mod.rs  parse.rs  pc.rs  reader.rs  request.rs  response.rs  util.rs  writer.rs
crates/webaves/src/net/: local.rs  mod.rs  rpc.rs
crates/webaves/src/service/: conn.rs  dns.rs  echo.rs  mod.rs  recording.rs  rpc.rs  tracker.rs
crates/webaves/src/tracker/: mod.rs  table.rs
crates/webaves/src/warc/: extract.rs  header.rs  mod.rs  reader.rs  writer.rs
crates/webaves/tests/: http_request_minimal  http_response_minimal  sha1sum.txt  test_http_reader.rs  test_http_writer.rs  test_warc.rs  warc_minimal.warc
crates/webaves/tests/data/: http_response_gzip
data/: project_config_template.toml
docs/: about.md  changelog_app.md  changelog_lib.md  conf.py  dns-lookup.md  index.md  install.md  requirements.txt  running.md  usage.md  warc.md
docs/commands/: dns-lookup.md  global.md  warc.md  webaves.dns-lookup.address.md  webaves.dns-lookup.md  webaves.dns-lookup.record.md  webaves.md  webaves.warc.checksum.md  webaves.warc.dump.md  webaves.warc.extract.md  webaves.warc.list.md  webaves.warc.load.md  webaves.warc.md
docs/commands/fragments/: webaves.dns-lookup.address.rst  webaves.rst  webaves.warc.checksum.rst  webaves.warc.dump.rst
docs/man_page/: webaves.dns-lookup.address.roff  webaves.dns-lookup.record.roff  webaves.dns-lookup.roff  webaves.roff  webaves.warc.checksum.roff  webaves.warc.dump.roff  webaves.warc.extract.roff  webaves.warc.list.roff  webaves.warc.load.roff  webaves.warc.roff
docs/man_page_fragments/: webaves.dns-lookup.address.rst  webaves.dns-lookup.record.rst  webaves.dns-lookup.rst  webaves.rst  webaves.warc.checksum.rst  webaves.warc.dump.rst  webaves.warc.extract.rst  webaves.warc.list.rst  webaves.warc.load.rst  webaves.warc.rst
src/: dns.rs  io.rs  lib.rs  main.rs  uuid.rs
src/app/: config.rs  mod.rs
src/http/: util.rs
src/io/: capture.rs
src/net/: dns.rs  mod.rs
src/net/http/: client.rs  mod.rs
src/project/: unit.rs
tests/: dns.rs
xtask/: Cargo.toml  README.md
xtask/data/: copyright_libs.txt
xtask/src/: common.rs  docs.rs  git.rs  github.rs  main.rs  manpage.rs  package.rs
