[package]
name = "webaves"
version = "0.0.0"
edition = '2021'
publish = false

[dependencies]
rand = "0.8"
thiserror = "1.0"
tokio = { version = "1.15", features = ["full"] }
tracing = "0.1"
trust-dns-resolver = { version = "0.20", features = ["dns-over-https-rustls"] }
uuid = "0.8"

[dev-dependencies]
env_logger = "0.9"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
