[package]
name = "webaves"
version = "0.0.0"
edition = '2021'
publish = false

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1"
bytes = "1.1"
clap = { version = "3.0", features = ["cargo", "unicode", "wrap_help"] }
headers = "0.3"
http = "0.2"
httparse = "1.5"
hyper = { version = "0.14", features = ["full"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.15", features = ["full"] }
toml = "0.5"
tracing = "0.1"
trust-dns-resolver = { version = "0.20", features = ["dns-over-https-rustls"] }
uuid = "0.8"

[dev-dependencies]
env_logger = "0.9"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
