[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
cargo_metadata = "0.15"
chrono = "0.4"
clap = { version = "3.2", features = ["color", "suggestions", "cargo", "unicode", "wrap_help"] }
flate2 = "1.0"
octocrab = { version = "0.16", default-features = false , features = [ "rustls" ] }
regex = "1.5"
serde_json = "1.0"
tar = "0.4"
tokio = { version = "1.19", default-features = false, features = ["macros", "rt-multi-thread"] }
walkdir = "2.3"
zip = { version = "0.6", default_features = false, features = ["deflate"] }
