[package]
name = "webaves-app"
version = "0.0.0"
edition = '2021'
publish = false

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "3.1", features = ["color", "suggestions", "cargo", "unicode", "wrap_help"] }
serde_json = "1.0"
tarpc = { version = "0.29", features = ["tokio1", "serde-transport"] }
tokio = { version = "1.19", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
webaves = { version = "0.0", path = "../webaves/" }
