[package]
name = "webaves-app"
version = "0.0.0"
edition = '2021'
publish = false

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "3.2", features = ["color", "suggestions", "cargo", "unicode", "wrap_help"] }
console = "0.15"
indicatif = "0.17.0-rc.11"
lazy_static = "1.4.0"
serde_json = "1.0"
tarpc = { version = "0.29", features = ["tokio1", "serde-transport"] }
tokio = { version = "1.19", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
webaves = { version = "0.0", path = "../webaves/" }

[[bin]]
name = "webaves"
path = "src/main.rs"
