[package]
name = "webaves"
version = "0.0.0"
edition = '2021'
publish = false

[dependencies]
async-trait = "0.1"
dirs = "4.0"
fslock = "0.2"
mx3 = "0.2"
percent-encoding = "2.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tarpc = { version = "0.29", features = ["tokio1", "serde-transport"] }
thiserror = "1.0"
tokio = { version = "1.19", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-util = "0.6"
tracing = "0.1"
trust-dns-resolver = { version = "0.21", features = ["dns-over-https-rustls"] }
uuid = { version = "1.1", features = ["serde"] }
whoami = "1.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[dev-dependencies]
env_logger = "0.9"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
