[package]
name = "webaves"
version = "0.0.0"
edition = '2021'
description = "Web archiving software suite"
license = "MPL-2.0"
repository = "https://github.com/chfoo/webaves"
categories = ["network-programming", "web-programming"]
keywords = ["api", "web"]
publish = false

[dependencies]
async-trait = "0.1"
brotli = "3.3"
chrono = "0.4"
dirs = "4.0"
flate2 = "1.0"
fslock = "0.2"
lazy_static = "1.4"
mx3 = "1.0"
nom = "7.1"
percent-encoding = "2.1"
rand = "0.8"
regex = "1.5"
rustyknife = "0.2"
serde = { version = "1.0", features = ["derive"] }
tarpc = { version = "0.29", features = ["tokio1", "serde-transport"] }
thiserror = "1.0"
tokio = { version = "1.19", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-util = "0.6"
tracing = "0.1"
trust-dns-resolver = { version = "0.21", features = ["dns-over-https-rustls"] }
url = { version = "2.2", features = ["serde"] }
utf-8 = "0.7"
uuid = { version = "1.1", features = ["serde"] }
whoami = "1.2"
zstd = "0.11"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[dev-dependencies]
env_logger = "0.9"
tempdir = "0.3"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
